# pyiodine

./: .gitignore  CHANGELOG.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
src/pyiodine/: __init__.py  __main__.py  client.py  common.py  dns.py  encoding.py  server.py  tunnel.py
tests/: __init__.py  conftest.py  test_client.py  test_common.py  test_dns.py  test_encoding.py  test_server.py  test_tunnel.py
