[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyiodine"
version = "0.1.0"
description = "Python implementation of iodine DNS tunneling tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Darío Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "dnspython>=2.4.0",
]

[project.optional-dependencies]
tun = [
    "pytun>=2.2.0",
]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "hatch>=1.12.0",
    "pip-api>=0.0.28",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.100.0",
]
lint = [
    "ruff>=0.9.0",
    "prospector>=1.18.0",
    "semgrep>=1.161.0",
    "mypy>=1.14.0",
]
all = ["pyiodine[dev,test,lint]"]

[project.scripts]
pyiodine = "pyiodine.__main__:main_client"
pyiodined = "pyiodine.__main__:main_server"

[project.urls]
Homepage = "https://github.com/daedalus/pyiodine"
Repository = "https://github.com/daedalus/pyiodine"
Issues = "https://github.com/daedalus/pyiodine/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pyiodine"]

[tool.hatch.build.targets.sdist]
include = ["src/pyiodine"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=50"
filterwarnings = ["ignore::DeprecationWarning"]
